git add and commit test

--- a/git.ipynb
+++ b/git.ipynb
@@ -102,8 +102,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git config\n",
-    "git config --list"
+    "#git config --list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "в терминале для настройки текущей конфигурации Git (хранится в .gitconfig\n",
+    "в домашней папке)"
    ]
   },
   {
@@ -112,8 +119,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git init \n",
-    "git clone"
+    "#git init "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "создает репозиторий Git (если создан уже, то реинициализирует текущий)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#git clone"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "клонирует существующий репо в папку с одноименным названием"
    ]
   },
   {
