--- a/git.ipynb
+++ b/git.ipynb
@@ -151,9 +151,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git add <имя_файла>\n",
-    "git commit -am \"<сообщение, описывающее содержание коммита>\"\n",
-    "git help <команда>"
+    "#git add <имя_файла> \n",
+    "#git add git.ipynb\n",
+    "#git commit -am \"<сообщение, описывающее содержание коммита>\"\n",
+    "#git commit -am \"git add and commit test\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "позволяет через терминал закоммитить определенный файл с его описанием.\n",
+    "главное - не забыть потом его запушить\n",
+    "\n",
+    "git commit -am command также помогает индексировать измененные файлы для\n",
+    "возможности затем откатиться к закоммиченной версии"
    ]
   },
   {
@@ -162,8 +174,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git help init\n",
-    "git help add"
+    "#git help <команда>\n",
+    "#git help init\n",
+    "#git help add"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "просмотр справки о команде"
    ]
   },
   {
@@ -172,7 +192,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git status"
+    "#git status"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "подсказка о коммитах, сохраненных файлах, измененных файлах, отслеживаемых и\n",
+    "неотслеживаемых файлах"
    ]
   },
   {
@@ -181,7 +209,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git commit -am command"
+    "#md wizcoin #создает папку wizcoin\n",
+    "#cd wizcoin #открывает папку wizcoin\n",
+    "#git init #превращение папки в репозиторий Git, все файлы неотслеживаемые"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "после git init создается папка wizcoin/.git, которая будет хранить метаданные\n",
+    "репозитория"
    ]
   },
   {
@@ -190,7 +228,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    ".git"
+    "#watch #для регулярного git status или git log -online"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "загрузить с https://inventwithpython.com/watch.exe и разместить в PATH\n",
+    "почему-то у меня .exe файл не запускается, в будущем попрактикую в Ubuntu"
    ]
   },
   {
@@ -199,9 +245,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git add .coveragerc\n",
-    "git add .gitignore\n",
-    "git add LICENSE.txt"
+    "#git add *.py #индексировать все py файлы из текущего рабочего каталога\n",
+    "#git add . #индексировать/добавить все неотслеживаемые файлы"
    ]
   },
   {
@@ -210,8 +255,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git add *.py\n",
-    "git add ."
+    "#git commit -m \"Adding new files to the repo.\" #описание коммита (create mode)"
    ]
   },
   {
@@ -220,9 +264,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git commit -m \"Adding new files to the repo.\"\n",
-    "git commit -m <сообщение>\n",
-    "git commit -am <сообщение>"
+    "#git commit -m <сообщение> file1.py file2.py #часть файлов закоммитится\n",
+    "#после git add .\n",
+    "#git commit -am <сообщение> #все файлы закоммитятся"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\"*\" - используется в .gitignore для шаблонов\n",
+    "полная документация к gitignore\n",
+    "https://git-scm.com/docs/gitignore\n",
+    "\n",
+    "https://github.com/django/django/commits/main/ - для примера названий коммитов"
    ]
   },
   {
@@ -231,7 +286,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git commit -m <сообщение> file1.py file2.py"
+    "#git ls-files --other --ignored --exclude-standard"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "чтобы увидеть, какие файлы игноруются"
    ]
   },
   {
@@ -240,18 +302,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git add\n",
-    "git commit\n",
-    "git status"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "git commit --amend -m \"<новое_сообщение>\""
+    "#git commit --amend -m \"<новое_сообщение>\" \n",
+    "#для изменения сообщения последнего коммита"
    ]
   },
   {
