--- a/git.ipynb
+++ b/git.ipynb
@@ -312,9 +312,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git diff command\n",
-    "git diff\n",
-    "git add README.md"
+    "#git diff #посмотреть изменения после коммита + и -"
    ]
   },
   {
@@ -323,8 +321,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git config diff.tool <название> #winmerge,tkdiff, meld, kompare\n",
-    "git difftool <имя_файла>"
+    "#git config diff.tool winmerge #(или tkdiff, meld, kompare) #установка граф\n",
+    "#интерфейса изменений\n",
+    "#git difftool README.md #для просмотра изменений в файле README.md"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Скачать WinMerge https://winmerge.org/, но у меня не удалась загрузка"
    ]
   },
   {
@@ -333,7 +339,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git config --global difftool.prompt false"
+    "#git config --global difftool.prompt false"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "чтобы не запрашивать подтверждения на запуск граф интерфейса"
    ]
   },
   {
@@ -342,7 +355,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git rm"
+    "#echo \"Test file\" > deleteme.txt #создает файл deleteme с текстом Test file\n",
+    "#git add deleteme.txt\n",
+    "#git commit -m \"Adding a file to test Git deletion.\"\n",
+    "#git status"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "сохранили файл deleteme.txt в репо, чтобы дальше тестить удалеие"
    ]
   },
   {
@@ -351,10 +374,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "echo \"Test file\" > deleteme.txt\n",
-    "git add deleteme.txt\n",
-    "git commit -m \"Adding a file to test Git deletion.\"\n",
-    "git status"
+    "#git rm deleteme.txt #удаляет файл из рабочей копии, не из репо, удаление\n",
+    "#индексируется\n",
+    "#git commit -m \"Deleting deleteme.txt from the repo to finish the deletion text.\" #коммит удаления из репо"
    ]
   },
   {
