git update after logs

--- a/git.ipynb
+++ b/git.ipynb
@@ -302,8 +302,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#git commit --amend -m \"<новое_сообщение>\" \n",
-    "#для изменения сообщения последнего коммита"
+    "#git commit --amend -m \"<новое_сообщение>\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "для изменения сообщения последнего коммита"
    ]
   },
   {
@@ -380,12 +386,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "git restore <имя_файла>"
+    "git rm удаляет в рабочей версии"
    ]
   },
   {
@@ -394,7 +398,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git rm deleteme.txt"
+    "#git reset HEAD <имя_файла> #предупреждает об изменениях после восстановления\n",
+    "#удаленного файла"
    ]
   },
   {
@@ -403,7 +408,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git commit -m \"Deleting deleteme.txt from the repo to finish the deletion test.\""
+    "#git mv README.md README.txt #изменение формата файла"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "git mv перемещает файл"
    ]
   },
   {
@@ -412,7 +424,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git reset HEAD <имя_файла>"
+    "#mkdir movetest #создание папки с названием movetest\n",
+    "#git mv README.txt movetest/README.txt #перемещение файла в папку\n",
+    "#git status\n",
+    "#git commit -m \"Testing the moving of files in Git\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "mkdir создает папку"
    ]
   },
   {
@@ -421,8 +443,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git mv\n",
-    "git commit"
+    "#git mv movetest/README.txt README.md"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "перемещение файла из папке и одновременное переименование файла (изменение\n",
+    "формата)"
    ]
   },
   {
@@ -431,8 +460,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git mv README.md README.txt\n",
-    "git status"
+    "#git log"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Вывод истории изменений (по коммитам)"
    ]
   },
   {
@@ -441,40 +476,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mkdir movetest\n",
-    "git mv README.txt movetest/README.txt\n",
-    "git status\n",
-    "git commit -m \"Testing the moving of files in Git\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "git mv movetest/README.txt README.md\n",
-    "git status\n",
-    "git commit -m \"Moving the README file back to its original place and name.\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "git log"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "git log --oneline #усекает вывод до сокращенных хешей и первой строки каждого сообщения коммита\n",
-    "git log --oneline -n 3 #ограничение вывода n последних коммитов (трех)"
+    "#git log --oneline #усекает вывод до сокращенных хешей и первой строки каждого сообщения коммита\n",
+    "#git log --oneline -n 3 #ограничение вывода n последних коммитов (трех)"
    ]
   },
   {
