update before checkout

--- a/git.ipynb
+++ b/git.ipynb
@@ -460,7 +460,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#git log"
+    "#git log\n",
+    "#q для выхода из просмотра"
    ]
   },
   {
@@ -486,7 +487,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git show <хеш>:<имя_файла>"
+    "#git show <хеш>:<имя_файла> #посмотреть содержимое файла в опред версии"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "например, по git show 7237b58e7006af87e5be6c46ede9b309f72d1c77:README.txt\n",
+    "в строке выводится содержимое этого файла"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://github.blog/open-source/git/how-to-undo-almost-anything-with-git/\n",
+    "\n",
+    "Инструкция восстановления старых версий"
    ]
   },
   {
@@ -495,7 +513,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git restore <имя_файла> #содержимое файла становится таким, как в последнем коммите"
+    "#git restore <имя_файла> #содержимое файла становится таким, как в последнем коммите (нельзя свои несохр изменения уже вернуть!)"
    ]
   },
   {
