README revert test

--- a/git.ipynb
+++ b/git.ipynb
@@ -522,7 +522,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git checkout . #отменить все изменения во всех файлах рабочей копии"
+    "#git checkout . #отменить все изменения во всех файлах рабочей копии"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "откатиться к последней закоммиченной версии"
    ]
   },
   {
@@ -531,8 +538,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git add\n",
-    "git restore --staged <имя_файла>"
+    "#git add\n",
+    "#git restore --staged <имя_файла>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "после индексации измененного файла командой git add исключается файл из\n",
+    "предстоящего коммита restore --staged, можно увидеть в git status"
    ]
   },
   {
