--- a/git.ipynb
+++ b/git.ipynb
@@ -495,7 +495,9 @@
    "metadata": {},
    "source": [
     "например, по git show 7237b58e7006af87e5be6c46ede9b309f72d1c77:README.txt\n",
-    "в строке выводится содержимое этого файла"
+    "в строке выводится содержимое этого файла\n",
+    "\n",
+    "но оно НЕ откатывается к этой версии"
    ]
   },
   {
@@ -556,7 +558,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git revert -n HEAD~3..HEAD"
+    "#git revert -n HEAD~3..HEAD #отменить три последние коммита (ВСЕ файлы)"
    ]
   },
   {
@@ -565,8 +567,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git add .\n",
-    "git commit -m \"<сообщение>\""
+    "#git log --oneline\n",
+    "#git show <хеш>:<имя_файла>\n",
+    "#git show b006f20:README.md #содержимое README.md на момент сохранения b006f20"
    ]
   },
   {
@@ -575,10 +578,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git revert -n HEAD~3..HEAD\n",
-    "git add .\n",
-    "git commit -m \"Starting over from the plot twist.\"\n",
-    "git log --oneline"
+    "#git checkout <хеш> -- <имя_файла>\n",
+    "#git checkout b006f20 -- README.md"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "можно вернуть содержимое рабочей копии файла к версии из хеша и далее\n",
+    "сохранить файл обычным способом"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font size=\"5\">\n",
+    "Перезапись истории коммитов (для работы с конфиденциальной инфо)\n",
+    "</font>\n",
+    "\n",
+    "1. git filter-branchor\n",
+    "\n",
+    "2. BFG Repo-Cleaner программа (предпочтительный способ)\n",
+    "\n",
+    "Подробнее на\n",
+    "https://help.github.com/en/articles/removing-sensitive-data-from-a-repository\n",
+    "\n",
+    "Лучше всего разместить секретную инфо в secrets.txt, confidential.py +\n",
+    "добавить их в .gitignore"
    ]
   },
   {
@@ -587,60 +615,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git log --oneline\n",
-    "git show <хеш>:<имя_файла>\n",
-    "git show 009b7c0:eggs.py #содержимое eggs.py на момент сохранения 009b7c0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "git checkout <хеш> -- <имя_файла> #можно вернуть содержимое рабочей копии eggs.py к версии из хеша и сохранить файл обычным способом"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "git checkout 009b7c0 -- eggs.py\n",
-    "git add eggs.py\n",
-    "git commit -m \"Rolled back eggs.py to 009b7c0\"\n",
-    "git log --oneline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "git filter-branchor"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "git remote add origin https://github.com/<пользователь_github>/wizcoin.git\n",
-    "#wizcoin - имя репозитория\n",
+    "git remote add origin https://github.com/<пользователь_github>/<название_репозитория>.git\n",
+    "\n",
     "git push -u origin master\n",
-    "#отправить все изменения, внесенные в локальном репозитории, в удаленный"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "git remote add origin https://github.com/<пользователь_github>/wizcoin.git\n",
+    "#из командной строки отправить все изменения, внесенные в локальном #репозитории, в удаленный\n",
+    "\n",
     "#добавляет GitHub как удаленный репозиторий, соответствующий локальному"
    ]
   },
