--- a/git.ipynb
+++ b/git.ipynb
@@ -629,7 +629,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git clone https://github.com/<пользователь_github>/wizcoin.git #загрузить репозиторий на локальный компьютер"
+    "#git add .\n",
+    "#git commit -am <сообщение>\n",
+    "#git push"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "БЫСТРЫЙ способ все закоммитить"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git clone https://github.com/<пользователь_github>/<название_репозитория>.git"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Загрузить репозиторий на локальный компьютер\n",
+    "\n",
+    "Сохранит в папку с названием репозитория"
    ]
   }
  ],
